<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorPrimaryDark"
>

    <android.support.v4.view.ViewPager
            android:id="@+id/image_viewpager"
            android:contentDescription="@string/image_cd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />
    <TextView
            android:text="@string/image_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_text_view"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorWhiteText"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/pager_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pagerNum"
            android:textColor="@color/colorWhiteText"
            app:layout_constraintTop_toBottomOf="@id/date_text_view"
            android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:id="@+id/close_dialog"
            android:src="@drawable/ic_arrow_back"
            android:background="@null"
            android:contentDescription="@string/close_dialog_cd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintVertical_bias="0" android:layout_marginTop="5dp"
    />

    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:id="@+id/share_intent"
            android:src="@drawable/ic_share_intent"
            android:background="@null"
            android:contentDescription="@string/share_intent_cd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="5dp"
    />

</android.support.constraint.ConstraintLayout>
